# deep-dynamics

./: .gitignore  README.md  pyproject.toml
cfgs/dataset/: autoverse.yaml
cfgs/model/: bayesrace.yaml  deep_dynamics.yaml  deep_dynamics_autoverse.yaml  deep_dynamics_iac.yaml  deep_dynamics_iac_better.yaml  deep_pacejka.yaml  deep_pacejka_iac.yaml
data/: .gitignore
deep_dynamics/cfgs/model/: deep_dynamics.yaml  (+3 more)
deep_dynamics/data/: .gitignore  DYN-PP-ETHZ.npz  DYN-PP-ETHZMobil.npz  LVMS_23_01_04_B.csv  Putnam_park2023_run4_2.csv
deep_dynamics/model/: __init__.py  build_network.py  evaluate.py  models.py  slurm_train.sh  test_hyperparameters.py  train.py  tune_hyperparameters.py
deep_dynamics/mpc/: run_nmpc_orca_deep_dynamics.py  run_nmpc_orca_deep_pacejka.py  run_nmpc_orca_true.py
deep_dynamics/tools/: __init__.py  bayesrace_parser.py  csv_parser.py
deep_dynamics/visualize/: plot_comparison_iac.py  plot_comparison_orca.py  plot_dataset.py  plot_error_iac.py  plot_error_mpc_orca.py  plot_error_orca.py  plot_mpc_comparison.py  plot_predictions_iac.py  plot_predictions_orca.py  plot_tire_model.py
model/: build_network.py  deep_dynamics.csv  deep_dynamics_reg.csv  deep_pacejka.csv  evaluate.py  hyperparam_tuning.ipynb  hyperparameter_tuning.py  models.py  plot_comparison_orca.py  run_nmpc_orca_deep_dynamics.py  run_nmpc_orca_deep_pacejka.py  run_nmpc_orca_true.py  test_hyperparameters.py  train.py  tune_hyperparameters.py  visualize_tuning.py
tools/: bag_parser.py  bayesrace_parser.py  csv_parser.py  rosbag_data_convert.py
visualize/: plot_dataset.py
(+4 files in other folders)
