[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_dynamics"
authors = [
    {name = "John Chrosniak", email = "jlc9wr@virginia.edu"},
]
description = "Deep dynamics"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "TODO"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]